# mkdocs-bulma-classes-plugin

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  mkdocs.yml  package-lock.json  package.json  pyproject.toml
.github/: renovate.json
.github/workflows/: docs.yml  release.yml  test.yml
docs/: getting_started.md  index.md  markdown.md
docs/bulma/elements/: tag.md  title.md
docs/bulma/helpers/: typography.md
mkdocs_bulma_classes_plugin/: plugin.py
mkdocs_bulma_classes_plugin/regexs/: regex.py
tests/: test_plugin.py
tests/regexs/: test_all_regexs.py  test_heading_regex.py  test_regex.py
tests/utils/: regex101.py
