[tool.poetry]
name = "mkdocs-bulma-classes-plugin"
version = "0.1.0"
description = "Add support to Bulma css framework in Mkdocs"
authors = ["Daniele Tentoni <daniele.tentoni.1996@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "mkdocs_bulma_classes_plugin/plugin.py"}]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.4.2"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."mkdocs.plugins"]
bulma-classes = 'mkdocs_bulma_classes_plugin.plugin:BulmaClassesPlugin'
